# EmaLang

./: .gitignore  Cargo.toml  EMA_MASTER_PLAN.md  emp.json  project.md  readme.md
Web/: app.ema
ema/: CHECKING.md  ast_webstack_demo.ema  broken.ema  component_css_demo.ema  db_migrate_demo.ema  ecommerce_demo.ema  ecommerce_full_demo.ema  embedded_webstack.ema  embedded_webstack_heredoc.ema  example.ema  html_events_demo.ema  html_invalid_demo.ema  html_parser_edgecases.ema  html_template_if_for.ema  http_json_echo.ema  http_json_encode.ema  http_json_object.ema  http_post_form.ema  http_route_html.ema  http_route_hydrate.ema  http_route_php.ema  http_route_ssr_page.ema  interpolation_demo.ema  js_invalid_demo.ema  js_subset_demo.ema  js_subset_destructuring.ema  js_subset_functions.ema  js_subset_spread_rest.ema  js_subset_template_strings.ema  js_subset_trycatch.ema  landing_page_demo.ema  onclick_more_demo.ema  onclick_set_demo.ema  php_isset_int_demo.ema  php_subset_test.ema  php_while_logic_demo.ema  project.ema  reactive_state_demo.ema  ssr_test.ema  ui_test.ema
ema-npm/: install.js  package.json
ema-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
migrations/: 001_init.sql  20260320130330_add_users.sql
src/: analyzer.rs  ast.rs  compiler.rs  css_lexer.rs  css_parser.rs  db.rs  db_migrator.rs  ema_runtime.c  html_lexer.rs  html_parser.rs  js_lexer.rs  js_parser.rs  lexer.rs  lsp.rs  main.rs  node_builder.rs  parser.rs  php_lexer.rs  php_parser.rs  runtime.rs  (+1 more)
(+18 files in other folders)
